--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,7 +2,7 @@ server:
   # Specify the port that runs the Data Center System
   port: 8085
 mysql:
-  # Specity the IP address, port number and the name of your database
+  # Specify the IP address, port number and the name of your database
   write_url: jdbc:mysql://database-IP:port/db_name?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC&allowMultiQueries=true&useSSL=false
   # Enter the login name of the database
   write_username: db_username
@@ -16,16 +16,17 @@ mysql:
   read_password: db_password
 
 chain:
-  # Default Node's JSON-RPC interface of Spartan-I Chain
+  # Default Node's JSON-RPC interface (--http.port) of Spartan-I Chain
   nodeRpcAddress: "http://node-IP:node-rpc-port"
   # Default chain's network ID, do not change this parameter
   chainId: 9090
   # Query the transaction pool's waiting time: millisecond, recommended 1.5 seconds
   txPoolSleep: 1500
   # Change the path of the Keystore file to a designated directory
-  walletFilePath: "[your-directory]/wallet"
-  # This number is recommended to be set as the latest block height of the Default Chain before the Data Center System started. The system can then parse events from all blocks after this block height. For example: blockHeight: 270441
-  blockHeight: [block_height]
+  walletFilePath: "your-directory/wallet"
+  # The system will parse events from all blocks after this block height. This number is recommended to be set as the latest block height of the Default Chain before the Data Center System started. For example: blockHeight: 270441
+  # You can get the block height from the blockchain explorer: https://spartanone.bsn.foundation
+  blockHeight: block_height
 
 task:
   # Whether to start a timed task to submit a transaction/time parse
